--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -1,4 +1,6 @@
 $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
+$selected-cell-background-color: rgba(200, 200, 255, 0.4);
+$resize-handle-color: #adf;
 
 .tippy-box .dropdown-item {
   &.is-active {
@@ -51,6 +53,60 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
     padding: 1.25em 1.5em;
   }
 
+  table {
+    border-collapse: collapse;
+    table-layout: fixed;
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+
+    td,
+    th {
+      min-width: 1em;
+      border: 2px solid $grey-lightest;
+      padding: 3px 5px;
+      vertical-align: top;
+      box-sizing: border-box;
+      position: relative;
+
+      > * {
+        margin-bottom: 0;
+      }
+    }
+
+    th {
+      font-weight: bold;
+      text-align: left;
+      background-color: $white-ter;
+    }
+
+    .selectedCell:after {
+      z-index: 2;
+      position: absolute;
+      content: '';
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background: $selected-cell-background-color;
+      pointer-events: none;
+    }
+
+    .column-resize-handle {
+      position: absolute;
+      right: -2px;
+      top: 0;
+      bottom: -2px;
+      width: 4px;
+      background-color: $resize-handle-color;
+      pointer-events: none;
+    }
+
+    p {
+      margin: 0;
+    }
+  }
+
   .suggestion {
     color: $info;
     border: 1px solid darken($info, 10%);
@@ -92,6 +148,25 @@ $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
       pointer-events: none;
       height: 0;
     }
+  }
+
+  .tableWrapper {
+    overflow-x: auto;
+
+    blockquote:not(:last-child),
+    dl:not(:last-child),
+    ol:not(:last-child),
+    p:not(:last-child),
+    pre:not(:last-child),
+    table:not(:last-child),
+    ul:not(:last-child) {
+      margin-bottom: 0;
+    }
+  }
+
+  .resize-cursor {
+    cursor: ew-resize;
+    cursor: col-resize;
   }
 }
 
@@ -141,8 +216,18 @@ $menu-icon-size: 0.75em;
     border-right: 1px solid $grey-lightest;
     padding: 0.25rem 0.5rem;
 
+    &,
+    &.table {
+      margin-bottom: 0;
+    }
+
     &.mark {
       width: 2rem;
+    }
+
+    &.disabled {
+      opacity: 0.2;
+      cursor: not-allowed;
     }
 
     &.dropdown-item {
@@ -151,6 +236,7 @@ $menu-icon-size: 0.75em;
       width: 100%;
       text-align: left;
       padding: 0.25rem 1rem;
+      margin: 0;
 
       &.is-active {
         background-color: $white;
