Move targets to rich text menu extensions

--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -158,10 +158,10 @@ $resize-handle-color: #adf;
     }
 
     /* purposely do not highlight these things */
-    .hljs-formula,
-    .hljs-params,
-    .hljs-property {
-    }
+    // .hljs-formula,
+    // .hljs-params,
+    // .hljs-property {
+    // }
 
     /* base03 - #545862 -  Comments, Invisibles, Line Highlighting */
     .hljs-comment {
@@ -348,16 +348,17 @@ $menu-icon-size: 0.75em;
   .dropdown-trigger {
     a {
       width: max-content;
-      border-radius: $menu-border-radius 0 0 $menu-border-radius;
     }
   }
 
-  > :first-child {
+  > :first-child,
+  > :first-child a {
     border-radius: $menu-border-radius 0 0 $menu-border-radius;
   }
 
   > :last-child {
     border-radius: 0 $menu-border-radius $menu-border-radius 0;
+    border-right: none;
   }
 
   a {
@@ -417,8 +418,8 @@ $menu-icon-size: 0.75em;
       text-decoration: underline;
     }
 
-    &.link {
-    }
+    // &.link {
+    // }
   }
 
   .link-panel {
