--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -418,6 +418,10 @@ $menu-icon-size: 0.75em;
       text-decoration: underline;
     }
 
+    &.strike {
+      text-decoration: line-through;
+    }
+
     // &.link {
     // }
   }
