--- a/app/views/documentation/pages/_form.html.erb
+++ b/app/views/documentation/pages/_form.html.erb
@@ -88,6 +88,7 @@
       <a class="mark bold" data-action="rich-text-editor#toggleBold" data-rich-text-editor-target="bold">B</a>
       <a class="mark italic" data-action="rich-text-editor#toggleItalic" data-rich-text-editor-target="italic">I</a>
       <a class="mark underline" data-action="rich-text-editor#toggleUnderline" data-rich-text-editor-target="underline">U</a>
+      <a class="mark strike" data-action="rich-text-editor#toggleStrike" data-rich-text-editor-target="strike">S</a>
     </div>
 
     <div data-rich-text-editor-target="tippy"></div>
