--- a/app/views/documentation/pages/index.html.erb
+++ b/app/views/documentation/pages/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="level-right">
-    <%= link_to "New page", new_page_path, class: 'button is-primary' %>
+    <%= link_to "New page", new_page_path, class: 'button is-primary', data: { action: 'modal#open' } %>
   </div>
 </div>
 
