Insert uploaded images

--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -31,7 +31,7 @@
 @import 'sass/elements/container';
 // @import 'sass/elements/content';
 @import 'sass/elements/icon';
-// @import 'sass/elements/image';
+@import 'sass/elements/image';
 @import 'sass/elements/notification';
 // @import 'sass/elements/progress';
 @import 'sass/elements/table';
