--- a/app/assets/stylesheets/documentation/rich_text_editor.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor.scss
@@ -1,4 +1,5 @@
 $menu-box-shadow: 0px 9px 9px rgba($black, 0.2), 0 0 0 1px rgba($black, 0.12);
+$selected-shadow: 0 0 0 3px rgba($primary, 0.5);
 $selected-cell-background-color: rgba(200, 200, 255, 0.4);
 $resize-handle-color: #adf;
 
@@ -298,6 +299,10 @@ $resize-handle-color: #adf;
       pointer-events: none;
       height: 0;
     }
+
+    img.ProseMirror-selectednode {
+      box-shadow: $selected-shadow;
+    }
   }
 
   .tableWrapper {
@@ -330,6 +335,11 @@ $menu-icon-size: 0.75em;
   border-radius: $menu-border-radius;
   width: fit-content;
 
+  .full-height {
+    display: block;
+    height: 100%;
+  }
+
   .toolbar-icon {
     .svg-inline {
       width: $menu-icon-size;
@@ -342,6 +352,9 @@ $menu-icon-size: 0.75em;
   }
 
   .toolbar-icon.image-icon {
+    width: 0.875rem;
+    height: 0.875rem;
+
     .svg-inline {
       width: 1em;
       height: 1em;
@@ -349,11 +362,19 @@ $menu-icon-size: 0.75em;
   }
 
   .image-grid-component {
-    padding: 0.25rem 0.75rem;
+    padding: 0.5rem 1rem;
     width: 25rem;
 
     .column {
-      padding: 0.5rem;
+      padding: 0.25rem;
+    }
+
+    .card {
+      box-shadow: 0 0 0 1px rgba($black, 0.25);
+
+      &:hover {
+        box-shadow: $selected-shadow;
+      }
     }
   }
 
