Delete images and remove Image node option

--- a/app/views/documentation/images/index.html.erb
+++ b/app/views/documentation/images/index.html.erb
@@ -13,8 +13,13 @@
 
   <%= render Bali::ImageGrid::Component.new do |c| %>
     <%= @images.each do |image| %>
-      <%= c.image(image_class: 'is-3by2') do %>
+      <%= c.image(id: dom_id(image), image_class: 'is-3by2') do |img| %>
         <%= image_tag main_app.url_for(image.variant(:thumb)) %>
+
+        <% img.footer(class: 'p-2') do %>
+          <%= link_to icon_tag('trash'), page_image_path(@page, image),
+              class: 'button is-danger is-small', 'data-turbo-method' => :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
