--- a/app/views/documentation/pages/_form.html.erb
+++ b/app/views/documentation/pages/_form.html.erb
@@ -20,7 +20,7 @@
     class="rich-text-editor-component input mb-4 rich-editor-content"
     data-controller="rich-text-editor"
     data-rich-text-editor-content-value='<%= page.content %>'
-    data-rich-text-editor-placeholder-value='Write page content here...'
+    data-rich-text-editor-placeholder-value="Type '/' for commands"
   >
     <div class="rich-text-editor-menu" data-rich-text-editor-target="bubbleMenu">
 
