Create tree view component

--- a/app/assets/stylesheets/documentation/variables.scss
+++ b/app/assets/stylesheets/documentation/variables.scss
@@ -37,3 +37,6 @@ $error: $danger;
 $box-shadow: 0px 3px 18px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.03);
 
 $z-index-notification: 10;
+$menu-width: 14rem;
+$section-side-padding-desktop: 3rem;
+$section-side-padding-mobile: 1.5rem;
