--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -89,9 +89,13 @@
 // Engine styles
 //
 @import 'rich_text_editor';
+@import 'page_menu';
+@import 'layout';
 
 // Bali Styles
 @import 'bali/dropdown/index';
 @import 'bali/image_grid/index';
 @import 'bali/modal/index';
 @import 'bali/tabs/index';
+
+@import 'documentation/tree_view/index';
