--- a/app/components/documentation/tree_view/index.scss
+++ b/app/components/documentation/tree_view/index.scss
@@ -1,21 +1,51 @@
 .tree-view-component {
   .tree-view-item-component {
     display: block;
+
+    .item {
+      padding: 0.25rem 0.5rem;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $white-ter;
+      }
+    }
+
+    .is-active {
+      background-color: $white-ter;
+    }
   }
 
-  .children {
-    padding-left: 1rem;
+  .children .item {
+    padding-left: 1.25rem;
   }
 
   .caret {
     cursor: pointer;
     user-select: none;
+    padding: 0.25rem;
+    margin-right: 0.25rem;
+    border-radius: 0.25rem;
+    font-size: $size-7;
 
     &:before {
       content: '\25B6';
       color: $black-ter;
       display: inline-block;
-      margin-right: 0.5rem;
+    }
+
+    &:hover {
+      background-color: $grey-lighter;
+    }
+  }
+
+  .is-childless .caret {
+    &:before {
+      color: $grey-light;
+    }
+
+    &:hover {
+      background-color: $white-ter;
     }
   }
 
