Move TreView component to Bali

--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -97,5 +97,4 @@
 @import 'bali/image_grid/index';
 @import 'bali/modal/index';
 @import 'bali/tabs/index';
-
-@import 'documentation/tree_view/index';
+@import 'bali/tree_view/index';
