--- a/app/assets/stylesheets/documentation/page_menu.scss
+++ b/app/assets/stylesheets/documentation/page_menu.scss
@@ -5,4 +5,18 @@
   padding: 0;
   background: $white;
   box-shadow: $box-shadow;
+  overflow: auto;
+
+  .workspace-switch {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0.5rem;
+  }
+
+  .dropdown-trigger a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
