--- a/app/views/documentation/pages/new.html.erb
+++ b/app/views/documentation/pages/new.html.erb
@@ -1,9 +1,10 @@
-<% content_for :container_class, 'is-max-desktop' %>
+<%= form_with(model: [@workspace, @page]) do |form| %>
+  <%= render 'layouts/documentation/target_errors', target: @page %>
 
-<nav class="breadcrumb" aria-label="breadcrumbs">
-  <ul>
-    <li><%= link_with_icon "Back to pages", 'arrow-back', pages_path %></li>
-  </ul>
-</nav>
+  <%= form.slim_select_group :parent_id, @pages.map {|p| [p.title, p.id] }, include_blank: 'Select page parent', label: false, add_to_body: true %>
+  <%= form.text_field_group :title, label: false, placeholder: 'Title', class: 'is-large' %>
+  <%= form.text_field_group :description, label: false, placeholder: 'Description' %>
 
-<%= render "form", page: @page %>
+  <%= form.submit_actions 'Guardar', class: 'button is-primary',
+      cancel_options: { data: { action: 'modal#close' } } %>
+<% end %>
