--- a/app/views/documentation/pages/_page.html.erb
+++ b/app/views/documentation/pages/_page.html.erb
@@ -18,6 +18,25 @@
 
 <div>
   <%= link_with_icon "Edit", 'edit', edit_workspace_page_path(@workspace, page) %> |
+
+  <%= render Bali::Dropdown::Component.new do |c| %>
+    <%= c.trigger do %>
+      <%= icon_tag('arrow-right') %>
+      <span>Transfer to another workspace</span>
+    <% end %>
+
+    <% (@workspaces - [@workspace]).each do |workspace| %>
+      <%= c.item(
+          href: workspace_page_path(
+            @workspace, page, { page: { documentation_workspace_id: workspace.id } }
+          ),
+          data: { 'turbo-method' => :put }
+      ) do %>
+        <%= workspace.name %>
+      <% end %>
+    <% end %>
+  <% end %> |
+
   <%= link_with_icon "Delete", 'trash', workspace_page_path(@workspace, page), class: 'has-text-danger',
       data: { 'turbo-confirm' => '¿Estás seguro?', 'turbo-method' => :delete } %>
 </div>
