Limit page seleccion dropdown content

--- a/app/assets/stylesheets/documentation/rich_text_editor/bubble_menu.scss
+++ b/app/assets/stylesheets/documentation/rich_text_editor/bubble_menu.scss
@@ -147,4 +147,9 @@ $menu-dropdown-icon-size: 0.75em;
       border: none;
     }
   }
+
+  .page-selection {
+    max-height: 200px;
+    overflow: auto;
+  }
 }
