--- a/app/views/documentation/workspaces/index.html.erb
+++ b/app/views/documentation/workspaces/index.html.erb
@@ -12,12 +12,14 @@
 
 <hr class="mb-6" />
 
-<div class="columns">
+<div class="columns is-multiline">
   <% @workspaces.each do |workspace| %>
-    <div class="column is-3 box">
-      <h1 class="title is-3">
-        <%= link_to workspace.name, workspace_path(workspace) %>
-      </h1>
+    <div class="column is-one-quarter">
+      <div class="box is-fullheight">
+        <h1 class="title is-3">
+          <%= link_to workspace.name, workspace_path(workspace) %>
+        </h1>
+      </div>
     </div>
   <% end %>
 </div>
