Configure permissions with host app entities

--- a/app/assets/stylesheets/documentation/general.scss
+++ b/app/assets/stylesheets/documentation/general.scss
@@ -2,6 +2,10 @@
   display: flex !important;
   justify-content: center;
   align-items: center;
+
+  &.inline {
+    display: inline-flex !important;
+  }
 }
 
 .is-fullheight {
