--- a/app/views/documentation/workspaces/_menu.html.erb
+++ b/app/views/documentation/workspaces/_menu.html.erb
@@ -45,5 +45,14 @@
       <%= icon_tag('plus') %>
       <span>New page</span>
     <% end %>
+
+    <hr class="my-4" />
+
+    <div class="vh-centered">
+      <%= link_to main_app.root_path, class: 'vh-centered' do %>
+        <%= icon_tag('arrow-left') %>
+        <span>Back to main App</span>
+      <% end %>
+    </div>
   </div>
 <% end %>
